feat: add ability to logout from all user's sessions
